Navegacion entre escenas

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,14 +1,22 @@
 plugins {
     id 'com.android.application'
 }
+configurations.all {
+    resolutionStrategy.eachDependency { DependencyResolveDetails details ->
+        if (details.requested.group == 'org.jetbrains.kotlin') {
+            details.useVersion '1.8.22' // Usa la última versión que estás utilizando
+        }
+    }
+}
+
 
 android {
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.lectura.ecovidrio"
         minSdk 21
-        targetSdk 33
+        targetSdk 34
         versionCode 1
         versionName "1.0"
 
