Crud operio y turno

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.EcoVidrio">
         <activity
+            android:name=".TurnoActivity"
+            android:exported="false" />
+        <activity
+            android:name=".CrudOperario"
+            android:exported="false" />
+        <activity
             android:name=".RecuperarContrasena"
             android:exported="false" />
         <activity
